# ros2

./: cli_commands.txt
ArmBots/ArmBot_1/install/: local_setup.sh  setup.sh
Control/panda/: frames_2025-07-22_17.51.59.gv  gazebo.logs  link_poses.txt  moveit.logs  panda_link_poses.txt  script.py
Control/six_dof_robot_ws/src/moveit_control/: CMakeLists.txt  package.xml
Control/six_dof_robot_ws/src/moveit_control/src/: WelderArmPlanner.cpp  hello_moveit.cpp
basics/ps6/: compile_commands.json
basics/ps7/: compile_commands.json
basics/ps8/: compile_commands.json
basics/ps9/: compile_commands.json
basics/ps_4/: compile_commands.json
basics/pub_sub_1/: compile_commands.json
boilerplate/install/: local_setup.sh  setup.sh
boilerplate/log/: latest_build
pipebot/install/: local_setup.sh  setup.sh
pipebot/log/: latest_build
ps6/install/: local_setup.sh  setup.sh
ps6/log/: latest_build  latest_list
ps7/install/: setup.sh
ps8/install/: local_setup.sh  setup.sh
ps8/log/: latest_build
ps_3/: compile_commands.json
ps_3/log/: latest_build  latest_list
ps_4/log/: latest_build  latest_list
ps_5/: compile_commands.json
ps_5/install/: setup.sh
ps_5/log/: latest_build  latest_list
pub_sub_1/install/: setup.sh  setup.zsh
pub_sub_1/log/: latest_list
sixhrs/: ReadMe.md
sixhrs/src/: .env
sixhrs/src/sixhrs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
sixhrs/src/sixhrs/cube/: config.json  cube.part  cube.stl
sixhrs/src/sixhrs/cube/assets/: part_2.part  part_2.stl
sixhrs/src/sixhrs/launch/: gazebo.launch.py  rviz.launch.py
sixhrs/src/sixhrs/launch/__pycache__/: gazebo.launch.d.er  rviz.launch.d.er
sixhrs/src/sixhrs/rviz/: cube.rviz
steward/install/: local_setup.sh  setup.sh
steward/log/: latest_build
test_2/install/: local_setup.sh  setup.sh
test_2/log/: latest_build
test_ws/: compile_commands.json
test_ws/install/: local_setup.sh  setup.sh
test_ws/log/: latest_build
(+771 files in other folders)
