
[metadata]
name = sixhrs
version = 0.0.1
author = Kol
author_email = kol@example.com
description = A simple ROS 2 package for visualizing a cube in RViz.
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    launch
    launch_ros
    ament_index_python

[options.entry_points]
console_scripts =
    launch_cube = sixhrs.launch_file_name:generate_launch_description
